# opportunitytxt

./: .gitignore  README.md  pyproject.toml
opportunity_txt/: __init__.py  __main__.py  cache.py  cli.py  collector.py  dimensions.py  errors.py  evaluate.py  models.py  normalizer.py  report.py  signals.py
