[project]
name = "opportunity-txt"
version = "1.0.0"
description = "Public GitHub evidence evaluator — deterministic contributor analysis engine"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
opportunity-txt = "opportunity_txt.cli:main"

[tool.setuptools.packages.find]
include = ["opportunity_txt*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
